2000-05-14  Lauris Kaplinski  <lauris@ariman.ee>

	* src/knot.*: Lot of rearranging, new signals

	* src/seltrans.c: Changes induced by new knot signalling
	Added fake snapping to PostScript points (remove it, if you dare ;)
 
2000-05-13  Lauris Kaplinski  <lauris@ariman.ee>

	* src/document-private.h: Removed width and height attributes

	* src/sp-root.c: Added "width" and "height" readable attributes
 
2000-05-12  Lauris Kaplinski  <lauris@ariman.ee>

	* src/xml/repr.h: A bit rearranging, added SPReprDoc, induces
	changes almost everywhere else

	* src/document-private.h: Hide all document internal structure
 
2000-05-12  Lauris Kaplinski  <lauris@ariman.ee>

	* src/sp-namedview.*: Implemented skeleton

	* src/sp-guide.*: Implemented skeleton

	* src/sp-object-repr.c: Added NamedView and Guide

	* src/helper/sp-guide.*: Changed name to SPGuideLine
 
2000-05-11  Lauris Kaplinski  <lauris@ariman.ee>

	* src/desktop-events.c: Collected events to separate file
	Added guidline and grid positioning skeleton

	* src/helper/sp-guide.*: Guideline implementation
 
2000-05-10  Lauris Kaplinski  <lauris@ariman.ee>

	* glade/*.xpm: Some new icons (thanks to Jeff Mrochuk)

	* src/knot.*: signals clicked, grabbed, ungrabbed, moved
	Many fixes and enhancements

	* src/seltrans.c: Use knots instead of Ctrl canvas items
 
2000-05-09  Michael Meeks  <michael@helixcode.com>

	* src/bonobo/svg-doc-factory.c (sp_svg_doc_factory_init): add
	config.h + OAFIID.

 	* Makefile.am: Install oaf data.
 
 	* src/main.c (main): re-tool for oaf.

	* configure.in: Check for oaf.
 
2000-05-06  Lauris Kaplinski  <lauris@ariman.ee>

	* src/knot.h: Added signals "grab", "ungrab" and "move"
	* src/knot.c: Implemented signals, event etc.

2000-05-05  Lauris Kaplinski  <lauris@ariman.ee>

	* src/desktop-handles.h: Added SP_DT_IS_EDITABLE
	* src/knot.*: started implementing universal handle object for
	all contexts

2000-05-05  Lauris Kaplinski  <lauris@ariman.ee>
