@@ -16,20 +16,25 @@
 
 #define STREAM_CHUNK_SIZE 4096
 
-static void sp_embeddable_document_class_init (GtkObjectClass * klass);
-static void sp_embeddable_document_init (GtkObject * object);
-
 #if 0
 static void sp_embeddable_document_destroyed (SPEmbeddableDocument * document);
 #endif
 
-static int sp_embeddable_document_pf_load (BonoboPersistFile * pfile, const CORBA_char * filename, gpointer closure);
-static int sp_embeddable_document_pf_save (BonoboPersistFile * pfile, const CORBA_char * filename, gpointer closure);
-static int sp_embeddable_document_ps_load (BonoboPersistStream * ps, Bonobo_Stream stream, gpointer closure);
-static int sp_embeddable_document_ps_save (BonoboPersistStream * ps, Bonobo_Stream stream, gpointer closure);
-static void sp_embeddable_document_print (GnomePrintContext * ctx, gdouble width, gdouble height, const Bonobo_PrintScissor * scissor, gpointer data);
 
-static gint sp_bonobo_stream_read (Bonobo_Stream stream, gchar ** buffer);
+static void
+sp_embeddable_document_class_init (GtkObjectClass * klass)
+{
+}
+
+static void
+sp_embeddable_document_init (GtkObject * object)
+{
+	SPEmbeddableDocument * document;
+
+	document = (SPEmbeddableDocument *) object;
+
+	document->document = NULL;
+}
 
 GtkType
 sp_embeddable_document_get_type (void)
@@ -47,97 +52,6 @@ sp_embeddable_document_get_type (void)
 		type = gtk_type_unique (BONOBO_EMBEDDABLE_TYPE, &info);
 	}
 	return type;
-}
-
-static void
-sp_embeddable_document_class_init (GtkObjectClass * klass)
-{
-}
-
-static void
-sp_embeddable_document_init (GtkObject * object)
-{
-	SPEmbeddableDocument * document;
-
-	document = (SPEmbeddableDocument *) object;
-
-	document->document = NULL;
-}
-
-BonoboObject *
-sp_embeddable_document_factory (BonoboEmbeddableFactory * this, gpointer data)
-{
-	SPEmbeddableDocument * document;
-	Bonobo_Embeddable corba_document;
-	BonoboPersistFile * pfile;
-	BonoboPersistStream * pstream;
-	BonoboPrint * print;
-
-	document = gtk_type_new (SP_EMBEDDABLE_DOCUMENT_TYPE);
-
-	corba_document = bonobo_embeddable_corba_object_create (
-		BONOBO_OBJECT (document));
-	if (corba_document == CORBA_OBJECT_NIL) {
-		gtk_object_unref (GTK_OBJECT (document));
-		return CORBA_OBJECT_NIL;
-	}
-
-	document->document = sp_document_new (NULL);
-
-	bonobo_embeddable_construct_full (BONOBO_EMBEDDABLE (document),
-		corba_document,
-		sp_embeddable_desktop_factory, NULL,
-		sp_embeddable_drawing_factory, NULL);
-
-	/* Add interfaces */
-
-	pfile = bonobo_persist_file_new (sp_embeddable_document_pf_load,
-		sp_embeddable_document_pf_save, document);
-
-	if (pfile == NULL) {
-		gtk_object_unref (GTK_OBJECT (document));
-		return CORBA_OBJECT_NIL;
-	}
-
-	bonobo_object_add_interface (BONOBO_OBJECT (document),
-				     BONOBO_OBJECT (pfile));
-
-	pstream = bonobo_persist_stream_new (sp_embeddable_document_ps_load,
-		sp_embeddable_document_ps_save, document);
-
-	if (pstream == NULL) {
-		gtk_object_unref (GTK_OBJECT (document));
-		bonobo_object_unref (BONOBO_OBJECT (pfile));
-		return CORBA_OBJECT_NIL;
-	}
-
-	bonobo_object_add_interface (BONOBO_OBJECT (document),
-				     BONOBO_OBJECT (pstream));
-
-	print = bonobo_print_new (sp_embeddable_document_print, document);
-
-	if (!print) {
-		gtk_object_unref (GTK_OBJECT (document));
-		bonobo_object_unref (BONOBO_OBJECT (pfile));
-		bonobo_object_unref (BONOBO_OBJECT (pstream));
-		return CORBA_OBJECT_NIL;
-	}
-
-	bonobo_object_add_interface (BONOBO_OBJECT (document),
-				     BONOBO_OBJECT (print));
-
-
-#if 0
-#if 0
-	sp_bonobo_objects++;
-#else
-	gnome_mdi_register (SODIPODI, GTK_OBJECT (document));
-#endif
-	gtk_signal_connect (GTK_OBJECT (document), "destroy",
-		GTK_SIGNAL_FUNC (sp_embeddable_document_destroyed), NULL);
-#endif
-
-	return BONOBO_OBJECT (document);
 }
 
 #if 0
@@ -194,8 +108,44 @@ sp_embeddable_document_pf_save (BonoboPersistFile * pfile, const CORBA_char * fi
 	return 0;
 }
 
-static int
-sp_embeddable_document_ps_load (BonoboPersistStream * ps, Bonobo_Stream stream, gpointer closure)
+static gint
+sp_bonobo_stream_read (Bonobo_Stream stream, gchar ** buffer)
+{
+	Bonobo_Stream_iobuf * iobuf;
+	CORBA_long bytes_read;
+	CORBA_Environment ev;
+	gint len;
+
+	CORBA_exception_init (&ev);
+
+	* buffer = NULL;
+	len = 0;
+
+	do {
+		bytes_read = Bonobo_Stream_read (stream, STREAM_CHUNK_SIZE, &iobuf, &ev);
+
+		if (ev._major != CORBA_NO_EXCEPTION) {
+			if (* buffer != NULL) g_free (* buffer);
+			len = -1;
+			break;
+		}
+
+		* buffer = g_realloc (* buffer, len + iobuf->_length);
+		memcpy (* buffer + len, iobuf->_buffer, iobuf->_length);
+
+		len += iobuf->_length;
+
+	} while (bytes_read > 0);
+
+	CORBA_exception_free (&ev);
+
+	return len;
+}
+
+static void
+sp_embeddable_document_ps_load (BonoboPersistStream *ps, const Bonobo_Stream stream,
+				Bonobo_Persist_ContentType type, gpointer closure,
+				CORBA_Environment *ev)
 {
 	SPEmbeddableDocument * document;
 	SPDocument * newdocument;
@@ -205,13 +155,21 @@ sp_embeddable_document_ps_load (BonoboPersistStream * ps, Bonobo_Stream stream, 
 	document = SP_EMBEDDABLE_DOCUMENT (closure);
 
 	len = sp_bonobo_stream_read (stream, &buffer);
-	if (len < 0) return -1;
+	if (len < 0) {
+		CORBA_exception_set (ev, CORBA_USER_EXCEPTION,
+				     ex_Bonobo_Persist_WrongDataType, NULL);
+		return;
+	}
 
 	newdocument = sp_document_new_from_mem (buffer, len);
 
 	g_free (buffer);
 
-	if (newdocument == NULL) return -1;
+	if (newdocument == NULL) {
+		CORBA_exception_set (ev, CORBA_USER_EXCEPTION,
+				     ex_Bonobo_Persist_WrongDataType, NULL);
+		return;
+	}
 
 	gtk_object_unref (GTK_OBJECT (document->document));
 	document->document = newdocument;
@@ -221,15 +179,14 @@ sp_embeddable_document_ps_load (BonoboPersistStream * ps, Bonobo_Stream stream, 
 
 	bonobo_embeddable_foreach_item (BONOBO_EMBEDDABLE (document),
 		sp_embeddable_drawing_new_doc, NULL);
-
-	return 0;
 }
 
-static int
-sp_embeddable_document_ps_save (BonoboPersistStream * ps, Bonobo_Stream stream, gpointer closure)
+static void
+sp_embeddable_document_ps_save (BonoboPersistStream *ps, const Bonobo_Stream stream,
+				Bonobo_Persist_ContentType type, gpointer closure,
+				CORBA_Environment *ev)
 {
 	g_warning ("embeddable_document_ps_save unimplemented");
-	return 0;
 }
 
 /*
@@ -267,37 +224,79 @@ sp_embeddable_document_print (GnomePrintContext * ctx,
 	gnome_print_grestore (ctx);
 }
 
-static gint
-sp_bonobo_stream_read (Bonobo_Stream stream, gchar ** buffer)
+BonoboObject *
+sp_embeddable_document_factory (BonoboEmbeddableFactory * this, gpointer data)
 {
-	Bonobo_Stream_iobuf * iobuf;
-	CORBA_long bytes_read;
-	CORBA_Environment ev;
-	gint len;
+	SPEmbeddableDocument * document;
+	Bonobo_Embeddable corba_document;
+	BonoboPersistFile * pfile;
+	BonoboPersistStream * pstream;
+	BonoboPrint * print;
 
-	CORBA_exception_init (&ev);
+	document = gtk_type_new (SP_EMBEDDABLE_DOCUMENT_TYPE);
 
-	* buffer = NULL;
-	len = 0;
+	corba_document = bonobo_embeddable_corba_object_create (
+		BONOBO_OBJECT (document));
+	if (corba_document == CORBA_OBJECT_NIL) {
+		gtk_object_unref (GTK_OBJECT (document));
+		return CORBA_OBJECT_NIL;
+	}
 
-	do {
-		bytes_read = Bonobo_Stream_read (stream, STREAM_CHUNK_SIZE, &iobuf, &ev);
+	document->document = sp_document_new (NULL);
 
-		if (ev._major != CORBA_NO_EXCEPTION) {
-			if (* buffer != NULL) g_free (* buffer);
-			len = -1;
-			break;
-		}
+	bonobo_embeddable_construct_full (BONOBO_EMBEDDABLE (document),
+		corba_document,
+		sp_embeddable_desktop_factory, NULL,
+		sp_embeddable_drawing_factory, NULL);
 
-		* buffer = g_realloc (* buffer, len + iobuf->_length);
-		memcpy (* buffer + len, iobuf->_buffer, iobuf->_length);
+	/* Add interfaces */
 
-		len += iobuf->_length;
+	pfile = bonobo_persist_file_new (sp_embeddable_document_pf_load,
+		sp_embeddable_document_pf_save, document);
 
-	} while (bytes_read > 0);
+	if (pfile == NULL) {
+		gtk_object_unref (GTK_OBJECT (document));
+		return CORBA_OBJECT_NIL;
+	}
 
-	CORBA_exception_free (&ev);
+	bonobo_object_add_interface (BONOBO_OBJECT (document),
+				     BONOBO_OBJECT (pfile));
 
-	return len;
+	pstream = bonobo_persist_stream_new (sp_embeddable_document_ps_load,
+					     sp_embeddable_document_ps_save,
+					     NULL, NULL, document);
+
+	if (pstream == NULL) {
+		gtk_object_unref (GTK_OBJECT (document));
+		bonobo_object_unref (BONOBO_OBJECT (pfile));
+		return CORBA_OBJECT_NIL;
+	}
+
+	bonobo_object_add_interface (BONOBO_OBJECT (document),
+				     BONOBO_OBJECT (pstream));
+
+	print = bonobo_print_new (sp_embeddable_document_print, document);
+
+	if (!print) {
+		gtk_object_unref (GTK_OBJECT (document));
+		bonobo_object_unref (BONOBO_OBJECT (pfile));
+		bonobo_object_unref (BONOBO_OBJECT (pstream));
+		return CORBA_OBJECT_NIL;
+	}
+
+	bonobo_object_add_interface (BONOBO_OBJECT (document),
+				     BONOBO_OBJECT (print));
+
+
+#if 0
+#if 0
+	sp_bonobo_objects++;
+#else
+	gnome_mdi_register (SODIPODI, GTK_OBJECT (document));
+#endif
+	gtk_signal_connect (GTK_OBJECT (document), "destroy",
+		GTK_SIGNAL_FUNC (sp_embeddable_document_destroyed), NULL);
+#endif
+
+	return BONOBO_OBJECT (document);
 }
-
