@@ -1,3 +1,12 @@
+2000-06-05  Michael Meeks  <michael@helixcode.com>
+
+	* src/dialogs/export.c (sp_export_do_export): s/rbuf_rgba_new/rbuf_new/
+
+	* src/bonobo/embeddable-document.c: kill a load of redundant prototypes,
+	and re-order to suit. (sp_embeddable_document_ps_save),
+	(sp_embeddable_document_ps_load): fix for new stream API.
+	(sp_embeddable_document_factory): update stream constructor.
+
 2000-05-14  Lauris Kaplinski  <lauris@ariman.ee>
 
 	* src/knot.*: Lot of rearranging, new signals
